@@ -9,6 +9,6 @@ end
 
 require 'spec/autorun'
 
-require File.join((File.dirname(File.dirname(File.expand_path(__FILE__)))), 'lib', 'reek', 'adapters', 'spec')
+require File.join((File.dirname(File.dirname(File.expand_path(__FILE__)))), 'lib', 'reek', 'spec')
 
 SAMPLES_DIR = 'spec/samples' unless Object.const_defined?('SAMPLES_DIR')
